syntax = "proto3";

message SizeResult {    // byte
    string /*uint64*/ total = 1;
    string /*uint64*/ avg = 2;
    string /*uint64*/ min = 3;
    string /*uint64*/ max = 4;
}

message TimeResult {    // ms
    uint64 total = 1;
    uint64 avg = 2;
    uint64 min = 3;
    uint64 max = 4;
}

message SpeedResult {   // bytes/s
    float avg = 1;
    float min = 2;
    float max = 3;
}

message PerfRequest {
    TimeResult time = 1;
    SpeedResult speed = 2;
    SizeResult size = 3;
    uint32 success = 4;
    uint32 failed = 5;
}

message PerfAccumulation {
    SizeResult size = 1;
    uint32 success = 4;
    uint32 failed = 5;
}

message PerfActionItem {
    uint32 err = 1;
    string /*uint64*/ time = 2;
    string key = 3;
    string value = 4;
}

message PerfAction {
    repeated PerfActionItem actions = 1;
}

message PerfRecord {
    string /*uint64*/ total = 3;
    optional string /*uint64*/ total_size = 4;
}